--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secp256k1.js",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Library for operations on secp256k1 keys.",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,8 @@
   "author": "Halfmoon Labs, Inc.",
   "license": "MIT",
   "dependencies": {
-    "elliptic": "^5.1.0"
+    "elliptic": "^5.1.0",
+    "validator": "^4.1.0"
   },
   "devDependencies": {
     "tape": "^4.2.1"
