--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "secp256k1.js",
-  "version": "0.1.2",
+  "name": "elliptic-curve",
+  "version": "0.0.0",
   "description": "Library for operations on secp256k1 keys.",
   "main": "index.js",
   "scripts": {
